# roam-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  roam-sdk-rs.md
.github/workflows/: ci.yml  publish-crate.yml  release-beta.yml  release.yml
docs/: README.md  SUMMARY.md
docs/sdk/: README.md  client.md  getting-started.md  queries.md  types.md
docs/tui/: README.md  configuration.md  installation.md  keybindings.md
src/: app.rs  config.rs  edit_buffer.rs  error.rs  highlight.rs  lib.rs  main.rs  markdown.rs
src/api/: client.rs  queries.rs  types.rs
src/app/: actions.rs  blocks.rs  input.rs  mod.rs  nav.rs  search.rs  state.rs  tasks.rs  test_helpers.rs  undo.rs
src/app/slash/: blockquote.rs  bold.rs  code.rs  date.rs  done.rs  embed.rs  execute.rs  h1.rs  h2.rs  h3.rs  highlight.rs  hr.rs  italic.rs  latex.rs  mod.rs  strikethrough.rs  time.rs  todo.rs  tomorrow.rs  types.rs  yesterday.rs
src/keys/: mod.rs  parser.rs  preset.rs
src/ui/: header.rs  main_area.rs  mod.rs  status_bar.rs
