[package]
name = "roam-tui"
version = "0.1.0"
edition = "2021"
description = "A terminal UI client for Roam Research"
license = "MIT"

[[bin]]
name = "roam"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
crossterm = { version = "0.28", features = ["event-stream"] }
directories = "5"
figment = { version = "0.10", features = ["toml", "env"] }
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
futures = "0.3"
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-c = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-md = "0.3"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
